--- a/style/style.css
+++ b/style/style.css
@@ -1,13 +1,18 @@
 html, body {
     margin: 0;
 	padding: 0;
-	height: 100%;
+	min-height: 100%;
     background: #000000;
     font-family: 'Roboto', sans-serif;
 }
 
+body {
+    background: rgb(0,0,0);
+    background: linear-gradient(335deg, rgba(0,0,0,1) 41%, rgba(41,41,41,1) 100%);
+}
+
 header {
-    margin-top: 50px;
+    padding-top: 50px;
 }
 
 .nav {
@@ -23,10 +28,14 @@ header {
     align-items: center;
     margin: auto;
     text-decoration: none;
+    -webkit-transition: all 0.5s 0s ease;
+    -moz-transition: all 0.5s 0s ease;
+    -o-transition: all 0.5s 0s ease;
+    transition: all 0.5s 0s ease;
 }
 
 .nav a:hover {
-    transform: scale(1.2);
+    transform: scale(1.1);
     color: #ffffff;
 }
 
@@ -34,8 +43,15 @@ header {
     padding-left:15px;
 }
 
+.social-media a img {
+    -webkit-transition: all 0.5s 0s ease;
+    -moz-transition: all 0.5s 0s ease;
+    -o-transition: all 0.5s 0s ease;
+    transition: all 0.5s 0s ease;
+}
+
 .social-media a img:hover {
-    transform: scale(1.2);
+    transform: scale(1.1);
 }
 
 #me {
@@ -49,6 +65,11 @@ header {
 #im {
     color: #D9D9D9;
     font-size: 50px;
+}
+
+#im b {
+    color: #00C0FD;
+    font-weight: bold;
 }
 
 #me img {
@@ -136,7 +157,8 @@ header {
 .projetos {
     display: flex;
     width: 100%;
-    justify-content: space-around;
+    justify-content: center;
+    gap: 30px;
 }
 
 .hbo img{
@@ -183,6 +205,11 @@ footer a {
     color: #A7A7A7;
     margin-right: 50px;
     text-decoration: none;
+    transition: 0.3s;
+}
+
+footer > div > a:hover {
+    color: #00C0FD;
 }
 
 footer div {
@@ -196,7 +223,7 @@ footer div {
         display: flex;
         margin: auto;
         flex-direction: column;
-        margin-top: 25px;
+        padding-top: 40px;
     }
 
     header .nav {
@@ -238,7 +265,6 @@ footer div {
     header {
         max-width: 800px;
         margin: auto;
-        margin-top: 15px;
     }
 
     header .nav {
@@ -325,6 +351,7 @@ footer div {
 
     #technologies {
         max-width: 500px;
+        margin-top: 70px;
     }
 
     #technologies h2 {    
@@ -333,6 +360,7 @@ footer div {
 
     #technologies p {
         font-size: 18px;
+        margin-bottom: 20px;
     }
 
     #technologies #icons img {
@@ -341,6 +369,8 @@ footer div {
 
     #projects {
         max-width: 500px;
+        padding-bottom: 100px;
+        margin-top: 100px;
     }
 
     #projects .info-top h2 {
@@ -416,6 +446,7 @@ footer div {
     #contact {
         max-width: 320px;
         width: 100%;
+        padding-bottom: 50px;
     }
 
     #contact div {
